--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 LOG_FILE_PATH=/path/to/your/access.log
 OPENAI_API_KEY=your_api_key
 OPENAI_API_MODEL=gpt-3.5-turbo
-LOG_FORMAT=CLF
+LOG_FILE_FORMAT=CLF
+BUFFER_FLUSH_INTERVAL=60
+BUFFER_SIZE_LIMIT=2000
